--- a/Javascript/01_Variable.html
+++ b/Javascript/01_Variable.html
@@ -102,7 +102,7 @@
 
   // expression interpolation (표현식 보간)
   const myName = 'sam smith'
-  console.log('My name is ${myName}')
+  console.log(`My name is ${myName}`)
 </script>
 <!--
     호이스팅(hoisting)
