--- a/Javascript/02_Operator.html
+++ b/Javascript/02_Operator.html
@@ -14,10 +14,11 @@
       3) 곱하기 : *            5 * 2 == 10
       4) 나누기 : /,           5 / 2 == 2.5
       5) 나머지 : %,           5 % 2 == 1
-
+      * Tip. 몫이 필요한 경우
+        parseInt 함수를 사용 parseInt(5/2) == 2
     2. 증감 연산자
-      1) ++
-      2) --
+      1) ++ : 전위 증가, 후위 증가
+      2) -- : 전위 감소, 후위 감소
 
     3. 대입 연산자 / 복합 대입 연산자
       1) 대입 : =
@@ -34,9 +35,9 @@
          not equal value, type : !==
 
     5. 논리 연산자
-      1) && : 논리 AND (short circuit 지원)
-      2) || : 논리 OR  (short circuit 지원)
-      3) !  : 논리 NOT
+      1) && : 논리 AND, 모두 만족하면 true 아니면 false (short circuit 지원)
+      2) || : 논리 OR, 하나만 만족해도 true 아니면 false  (short circuit 지원)
+      3) !  : 논리 NOT, true와 false를 반대로 바꿈
 
     6. 조건 연산자(삼항 연산자)
       조건식 ? true 일 때 반환 : false 일 때 반환
@@ -44,6 +45,74 @@
     7. 문자열 연결 연산자
       +, +=
 -->
+<script>
+  const a = 5;
+  const b = 2;
+  document.write(`<div>${a} + ${b} = ${a+b}</div>`)
+  document.write(`<div>${a} - ${b} = ${a-b}</div>`)
+  document.write(`<div>${a} * ${b} = ${a*b}</div>`)
+  document.write(`<div>${a} / ${b} = ${a/b}</div>`)
+  document.write(`<div>${a} % ${b} = ${a%b}</div>`)
+  document.write(`<div>${a} parseInt ${b} = ${parseInt(a/b)}</div>`)
+</script>
+
+<hr>
+
+<script>
+  let i = 1;
+  let prePlus = ++i; // 전위 증가, i를 먼저 증가한 뒤 prePlus에 할당
+  let postPlus = i++; // 후위 증가, i를 postPlus에 할당한 뒤 나중에 증가
+  document.write(`<div>i = ${i}</div>`);
+  document.write(`<div>prePlus = ${prePlus}</div>`);
+  document.write(`<div>postPlus = ${postPlus}</div>`);
+
+</script>
+
+<hr>
+
+<script>
+  let n = 10;
+  document.write(`<div>${n += 10}</div>`) // n + 10의 결과를 n에 할당 (n = n + 10)
+  document.write(`<div>${n -= 10}</div>`) // 
+  document.write(`<div>${n *= 10}</div>`) //
+  document.write(`<div>${n /= 10}</div>`) // 
+</script>
+
+<hr>
+
+<script>
+  const x = 10;
+  const y = 20;
+  const z = '10';
+  document.write(`<div>${x > y}</div>`);
+  document.write(`<div>${x >= y}</div>`);
+  document.write(`<div>${x < y}</div>`);
+  document.write(`<div>${x <= y}</div>`);
+  document.write(`<div>${x == z}</div>`);
+  document.write(`<div>${x === z}</div>`);
+  document.write(`<div>${x != z}</div>`);
+  document.write(`<div>${x !== z}</div>`);
+</script>
+
+<hr>
+
+<script>
+  // 키와 통장잔액
+  const height = 185;
+  const balance = 3000;
+  // 난 키가 180 이상이고 통장잔액이 5000 이상이면 만나보겠다.
+  document.write(`<div>${height >= 180 && balance >= 5000}</div>`);
+  // 난 키가 180 이상이거나 통장잔액이 5000 이상이면 만나보겠다.
+  document.write(`<div>${height >= 180 || balance >= 5000}</div>`);
+  // 논리 AND 의 short circuit 확인(False가 나오면 더 이상 연산하지 않는다.)
+  document.write(`<div>${balance >= 5000 && ++height >= 180}</div>`);
+  document.write(`<div>height ${height}</div>`);
+  // 논리 OR의 short circuit 확인(True가 나오면 더 이상 연산하지 않는다.)
+  document.write(`<div>${height >= 180 || ++balance >= 5000}</div>`);
+  document.write(`<div>balance${balance}</div>`);
+</script>
+<hr>
+
 
 <!--
     boolean 타입의 true 와 false
@@ -51,7 +120,56 @@
     2. false : 데이터가 없으면 false 로 간주한다. (0, 0.0, '', undefined, null 등)
 -->
 
+<script>
+  let cabinet = 'dress';
+  document.write(`<div>${cabinet || 'pack'}</div>`); // cabinet에 값이 있으면 쓰고 없으면 pack을 써라 (Javascript의 독특한 default 처리 방식)
+
+  document.write(`<div>${false == 0},${0 === false}</div>`);
+</script>
+
+<script>
+  // 삼항 연산자
+  let number = -10;
+  document.write(`<div>${number}는 ${number >= 0 ? '양수' : '음수'}이다.</div>`);
+</script>
+<hr>
+
+<script>
+  let age = 11;
+  document.write('<div>나이는 ' + age + '살입니다.</div>');
+</script>
+<!-- 문제. 라면 박스 계산하기-->
+<script>
+  /* 라면이 65개 있다. 한 박스당 20개 들어간다. 몇 박스 남는지, 남는 라면 몇개인지 계산하시오 */
+
+ let ramen = 65;
+ let box;
+ box = parseInt(ramen/20);
+ ramen %= 20;
+ document.write(`<div>라면 박스 : ${box}개, 남은 라면 : ${ramen}개</div>`)
+ 
+</script>
+<hr>
+
 <!-- 문제. 일급 계산하기 -->
+<script>
+  /* 
+    2025년 최저 시급 10,030원
+    10시간 근무하면 일급이 얼마인가?
+    8시간까지는 기본 시급, 초과 근무는 기본 시급의 1.5배
+  */
+  const hourlyWage = 10030;
+  const workingTime = 10;
+  const regularPay = hourlyWage * workingTime; // 기본 시급 계산
+  const extraPay = (workingTime <= 8 ? 0 : workingTime - 8) * hourlyWage * 0.5;
+  document.write(`<div>${workingTime}시간 근무한 급여는 ${regularPay + extraPay}원입니다.</div>`);
+  let pay = 10030;
+  let time = 10;
+  let daypay = pay * time
+  document.write(`<div>pay는 ${time <= 8 ? pay : pay * 1.5}이다.</div>`);
+  document.write(`<div>${pay*8 + 15045 * 2}</div>`);
+</script>
+
 
 </body>
 </html>
