--- a/Javascript/01_Variable.html
+++ b/Javascript/01_Variable.html
@@ -116,9 +116,9 @@
     5. 변수 선언과 초기화가 동시에 진행되는 경우 변수 선언만 분리해서 먼저 처리한다.
 -->
 <script>
-  var myMoney;          // 2
-  myMoney = 1000;       // 3
-  console.log(myMoney); // 1 --> var 변수 선언은 호이스팅에 의해서 항상 먼저 처리된다.
+  myMoney = 1000;       // 2
+  console.log(myMoney); // 3 
+  var myMoney;          // 1 --> var 변수 선언은 호이스팅에 의해서 항상 먼저 처리된다.
 
   console.log(myCar);
   var myCar = 'sonata'; //var myCar;
