--- a/Javascript/04_Array.html
+++ b/Javascript/04_Array.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Array</title>
 </head>
 <body>
   
@@ -14,12 +14,61 @@
     2. 배열의 길이는 length 속성(property)으로 확인할 수 있다.
     3. 배열의 길이를 조정할 수 있다. length 속성(property)을 직접 수정하는 것도 가능하다.
     4. 첫 번째 요소의 인덱스는 "0"이고 마지막 요소의 인덱스는 "length 속성값 - 1" 이다.
+    (인덱스는 각 배열 요소의 위치 정보이다.)(배열의 길이가 5인 경우 사용 가능한 인덱스는 0부터 4까지이다.)
     5. 배열 요소는 대괄호 표기법으로 접근한다.
       배열[인덱스]
     6. 형식
-      배열 = [요소1, 요소2, ...]
+      배열 = [요소1, 요소2, ...] 
     7. trailing comma (후행 쉼표)를 사용할 수 있다.
 -->
+    <h4>배열</h4>
+<script>
+  // 배열 이름 : ary
+  // 배열 길이 : ary.length(3)
+  // 배열 요소 : ary[0][40], ary[1]('jessica'), ary[2](true)
+  // 배열 인덱스 : 0, 1, 2
+ let ary = [40, 'jessica', true];
+ console.log('배열 이름', ary);
+ console.log('배열 길이', ary.length);
+ console.log('배열 요소', ary[0], ary[1], ary[2]);
+ ary.length = 4;
+ console.log('존재하지 않는 배열 요소', ary[4]);
+
+ // 모든 배열 요소를 for 문으로 조회하기 (인덱스를 기준으로 for 문 처리하기, 매우 중요함)
+ for(let i = 0; i < ary.length; i++) {
+  document.write(`<div>${ary[i]}</div>`);
+ }
+</script>
+<hr>
+<script>
+  // 문제. 봄, 여름, 가을, 겨울 출력하기
+  /*
+  month          month % 12      parseInt({month % 12} / 3)
+  ---------------------------------------
+  12, 1, 2       0, 1, 2          0
+  3, 4, 5        3, 4, 5          1
+  6, 7, 8        6, 7, 8          2 
+  9, 10, 11      9, 10, 11        3
+  
+  */ 
+  
+  let month =10;
+  let seasons = ['봄', '여름', '가을', '겨울'];
+  
+  document.write(`<div>${month}월은 ${seasons[parseInt(month % 12 / 3)]}입니다.</div>`);
+</script>
+
+요일 맞추기
+<script>
+  let day = 1;
+  let weekName = ['월', '화','수', '목', '금', '토', '일'];
+  let nDay = 30;
+  day += nDay;
+  let dayNo = day % 7;
+  document.write(`<div>${nDay}일 후에는 ${weekName[dayNo]}요일입니다.</div>`);
+
+</script>
+<hr>
 
 <!--
     for in 문
@@ -29,14 +78,13 @@
         본문
       }
 -->
-
-<!--
-    구조 분해 할당 (Destructuring Assignment)
-    1. 배열의 각 요소를 개별 변수에 쉽게 할당할 수 있는 JavaScript 표현식이다.
-    2. 배열의 일부 요소만 개별 변수에 할당할 수 있다.
-    3. 형식
-      [ 변수1, 변수2, ... ] = 배열
--->
+<h4>for in 문</h4>
+<script>
+  let cities = ['seoul', 'rome', 'new-york', 'sidney', 'tokyo'];
+  for (let i in cities) {
+    document.write(`<div>인덱스 ${i} : ${cities[i]}</div>`);
+  }
+</script>
 
 <!--
     for of 문
@@ -46,6 +94,40 @@
         본문
       }
 -->
+<h4>for of 문</h4>
+<script>
+  // 요소만 추출
+  let activities = ['skydiving', 'zipline', 'surfing', 'freediving']
+  for(let activity of activities) {
+    document.write(`<div>${activity}</div>`);
+  }
+  // 인덱스와 요소 모두 추출
+  for(let [i, activity] of activities.entries()){
+    document.write(`<div>인덱스 ${i} : ${activity}</div>`);
+  }
+
+</script>
+<!--
+    구조 분해 할당 (Destructuring Assignment)
+    1. 배열의 각 요소를 개별 변수에 쉽게 할당할 수 있는 JavaScript 표현식이다.
+    2. 배열의 일부 요소만 개별 변수에 할당할 수 있다.
+    3. 형식
+      [ 변수1, 변수2, ... ] = 배열
+-->
+<h4>구조 분해 할당</h4>
+<script>
+  let weapons = ['gun', 'knife', 'sword', 'bomb'];
+  let [w1, w2, w3, w4] = weapons;
+  document.write(`<div>${w1}, ${w2}, ${w3}, ${w4}</div>`);
+  /*
+  모두 가능한 형태의 구조 분해 할당
+  let [w1] = weapons;
+  let [w1, w2] = weapons;
+  let [w1, w2, w3] = weapons;
+  
+  */
+
+</script>
 
 <!-- 문제. 링크 메뉴 만들기 -->
 <h1>링크 메뉴 만들기</h1>
@@ -55,8 +137,20 @@
     <div><a target="_blank" href="https://www.naver.com/">네이버</a></div>
     <div><a target="_blank" href="https://www.google.com/">구글</a></div>
     <div><a target="_blank" href="https://www.kakao.com/">카카오</a></div>
-  */
 
+    <div><a target="_blank" href="${sites[1]}">${sites[0]}</a></div>
+    <div><a target="_blank" href="${sites[3]}"">${sites[2]}</a></div>
+    <div><a target="_blank" href="${sites[5]}">${sites[4]}</a></div>
+  */
+ const sites = [
+  '네이버', 'https://www.naver.com/',
+  '구글', 'https://www.google.com/',
+  '카카오', 'https://www.kakao.com/'
+ ];
+ for(let i = 1; i < sites.length; i += 2){
+  document.write(`<div><a target = "_blank" href="${sites[i]}" href = "${sites[i]}" > ${sites[i-1]}</a></div>`)
+ };
+ 
 </script>
 <hr>
 
