--- a/Javascript/05_Object.html
+++ b/Javascript/05_Object.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Object</title>
 </head>
+
 <body>
-    
-<!--
+
+  <!--
     객체
     1. JavaScript 데이터 유형 중 하나이다.
     2. 다양한 키 모음 및 더 복잡한 엔티티들을 저장하는데 사용된다.
@@ -23,15 +25,57 @@
       1) 객체.속성
       2) 객체['속성']
 -->
+  <h4>객체</h4>
+  <script>
+    let movie = {
+      'title': '노트북',
+      'director': '닉 카사베츠',
+      'year': 2004,
+      'actors': ['라이언 고슬링', '레이첼 맥아담스'],
+      'info': {
+        'nation': '미국',
+        'genre': '멜로/로맨스',
+        'runningTime': 123
+      }
+    } // property의 '' 작은따옴표는 생략이 가능하다.
+    document.write(`<div>제목 : ${movie.title}</div>`);
+    document.write(`<div>감독 : ${movie['director']}</div>`);
+    document.write(`<div>제작년도 : ${movie.year}</div>`);
+    document.write(`<div>배우 : </div>`);
+    for (let i = 0; i < movie.actors.length; i++) {
+      document.write(`${movie.actors[i]}, `);
+    }
+    document.write(`</div>`);
+    document.write(`<div>제작국가 : ${movie.info.nation}</div>`);
+    document.write(`<div>장르 : ${movie.info.genre}</div>`);
+    document.write(`<div>러닝타임 : ${movie.info.runningTime}</div>`);
+  </script>
 
-<!--
+  <hr>
+
+  <h4>객체 프로퍼티</h4>
+  <script>
+    //비어 있는 객체
+    let car = {}
+    // 동적 프로퍼티 추가
+
+    car.maker = 'bmw';
+    car.model = 'x5';
+    // 프로퍼티 삭제
+    delete car.model;
+    document.write(`<div>제조사 : ${car.maker}</div>`);
+    // json(javascript object notation) 표기법이라고 함
+  </script>
+
+
+  <!--
     객체 프로퍼티(속성, property)
     1. 문자열이나 Symbol을 사용할 수 있다.
     2. 동적 프로퍼티 생성을 지원한다.
     3. delete 연산자를 이용해서 객체의 특정 프로퍼티를 삭제할 수 있다.
 -->
 
-<!--
+  <!--
     for in 문
     1. 객체가 가지고 있는 모든 속성(property)을 for in 문으로 하나씩 조회할 수 있다.
     2. 임의의 순서로 객체의 속성들을 조회한다.
@@ -42,8 +86,21 @@
         본문
       }
 -->
-
-<!--
+  <h4>for in 문</h4>
+  <script>
+    let book = {
+      title: '채식주의자',
+      author: '한강',
+      price: 15000
+    }
+    for (let prop in book) {
+      document.write(`<div>확인 불가 : ${book.prop}</div>`); // 속성을 string으로 인식하기 때문에 일어나는 현상
+    }
+    for (let prop in book) {
+      document.write(`<div>확인 가능 : ${book[prop]}</div>`)
+    }
+  </script>
+  <!--
     구조 분해 할당 (Destructuring Assignment)
     1. 객체의 각 프로퍼티 값을 개별 변수에 쉽게 할당할 수 있는 JavaScript 표현식이다.
     2. 객체의 프로퍼티 이름과 개별 변수의 이름을 동일하게 맞춰야 한다.
@@ -51,20 +108,83 @@
     4. 형식
       { 변수1, 변수2, ... } = 객체
 -->
+  <hr>
+  <h4>구조 분해 할당</h4>
+  <script>
+    let person = {
+      name: 'jessica',
+      age: 30,
+      isMarried: false,
+      contacts: ['010-1111-1111', '02-222-2222']
+    }
 
-<!-- 문제. <a> 태그와 <img> 태그 넣기 -->
-<h1>&lt;a&gt; 태그와 &lt;img&gt; 태그 넣기</h1>
-<script>
-  /*
+    let { name, isMarried } = person;
+    document.write(`<div>이름 : ${name}</div>`);
+    document.write(`<div>${isMarried ? '기혼' : '미혼'}</div>`);
+  </script>
+  <script>
+    //새로운 변수 이름으로 재할당하기
+    let qna = {
+      q: 'What is the capital of Korea?',
+      a: 'Seoul'
+    }
+    let { q: question, a: answer } = qna; // 프로퍼티 q값을 변수 q로 받아온 뒤 변수명을 question으로 바꾼다.
+    document.write(`<div>${question} ${answer}</div>`);
+
+  </script>
+
+  <hr>
+  <!-- 문제, 링크 메뉴 만들기-->
+  <h4>링크 메뉴 만들기</h4>
+  <script>
+   
+  const sites = [
+    {
+      name : '네이버',
+      url : 'https://www.naver.com/'
+    },
+    {
+      name : '구글',
+      url : 'https://www.google.com/'
+    },
+    {
+      name : '카카오',
+      url : 'https://www.kakao.com/'
+    },
+  ]
+  for(const site of sites){
+    document.write(`<div><a target="_blank" href="${site.url}">${site.name}</a></div>`);
+  }  
+  </script>
+  <hr>
+  <!-- 문제. <a> 태그와 <img> 태그 넣기 -->
+  <h1>&lt;a&gt; 태그와 &lt;img&gt; 태그 넣기</h1>
+  <script>
+    /*
     목표)
     <ul>
       <li><a href="https://www.google.com/"><img src="../assets/images/logo_google.png" width="192px"></a></li>
       <li><a href="https://www.naver.com/"><img src="../assets/images/logo_naver.png" width="192px"></a></li>
     </ul>
-  */
-
-</script>
-<hr>
+    */
+  const portals = [
+    {
+      url : 'https://www.google.com/',
+      logo : 'logo_google.png', 
+    },
+    {
+      url : 'https://www.naver.com/',
+      logo : 'logo_naver.png',
+    },
+  ]
+    document.write('<ul>');
+      for(const portal of portals){
+        document.write(`<li><a target="_blank" href="${portal.url}"><img src="../assets/images/${portal.logo}" width = "192px"></a></li>`);
+      }
+    document.write('</ul>');  
+  </script>
+  <hr>
 
 </body>
+
 </html>
