--- a/Javascript/06_Function.html
+++ b/Javascript/06_Function.html
@@ -326,6 +326,29 @@
     </script>
     <hr>
 
+    <h4>화살표 함수 다루기</h4>
+    <script>
+
+      // 인자x, 반환x
+      const fnArgRet1 = () => document.write('<div>fnArgRet1</div>'); // 본문 실행 코드가 1개이면 중괄호 생략
+      fnArgRet1();
+
+      // 인자 o , 반환 x
+      const fnArgRet2 = param =>document.write(`<div>fnArgRet2 : ${param}</div>`); // 단일 매개변수이면 소괄호() 생략 가능
+      fnArgRet2(10);
+
+      // 인자 x, 반환 o
+      const fnArgRet3 = () => 'Hello'; // 함수 본문이 return 뿐이면 return 생략 가능
+      document.write(`<div>fnArgRet3 : ${fnArgRet3()}</div>`);
+
+      // 인자 o, 반환 o
+      const fnArgRet4 = param => param +1;
+      document.write(`<div>fnArgRet4 : ${fnArgRet4(10)}</div>`);
+
+      const fnArgRet5 = param1 => param1 -1;
+      document.write(`<div>fnArgRet5 : ${fnArgRet5(5)}</div>`);
+
+    </script>
   <!-- 문제1. checkWeight() 함수 구현하기 -->
   <h4>checkWeight() 함수</h4>
   <script>
