--- a/Javascript/08_Number_Object.html
+++ b/Javascript/08_Number_Object.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Number_object</title>
 </head>
 <body>
   
 <!--
     Number 내장 객체 (숫자를 표현하고 다루는 Primitive wrapper object)
 
-    1. Number() 생성자
+    1. Number() 생성자 >> 문자열을 숫자로 바꾸는 법
       → Number('123')     === 123
       → new Number('123') === 123
 
@@ -51,8 +51,31 @@
       → 소수점 뒤에 나타날 자릿수, 0 ~ 20 사이 값을 가짐, 기본값은 0
 -->
 
+<h4>Number 내장 객체</h4>
+<script>
+
+  let input = Number(prompt('값을 입력하세요.')); // 프롬프트로 입력된 string 데이터를 number type으로 변환
+  document.write(`<div>입력 데이터 타입 : ${typeof input}</div>`);
+  document.write(`<div>입력 데이터 : ${input}</div>`);
+
+  // Number.isNaN(): NaN이면 true
+  let variable = 'string';
+  document.write(`<div>${Number.isNaN(variable/1)}</div>`);
+
+  // Number.parseInt() : 전달된 문자열을 정수로 변환해서 반환, 소수점아래를 버리고 나옴
+  let iNum = Number.parseInt('10.5');
+  document.write(`<div>${typeof iNum}, ${iNum}</div>`);
+
+  // Number.parseFloat() : 전달된 문자열을 실수로 변환해서 반환
+
+  let fNum = Number.parseFloat('15');
+  document.write(`<div>${typeof fNum}, ${fNum}</div>`);
 
 
+  document.write(15 == 15.0);
+</script>
+
+ 
 <!-- 문제. getTotal() 함수 구현하기 -->
 <h4>getTotal() 함수</h4>
 <script>
@@ -65,7 +88,19 @@
     3. 반환
       배열에 포함된 숫자만 모두 더한 값
   */
+  
+  const getTotal = (ary) => {
+   let total = 0;
+   ary.forEach(element => {
+    if(typeof element !== 'boolean' && Number.isNaN(element / 1) === false){ //if(!Number.isNaN(element / 1)) // true와 false가 0과 1로 간주되어 연산에 간섭하기 때문에 걸러주는 작업이 필요함
+      total += Number.parseInt(element);
+    }
+   });
+   return total;
+  }
 
+  const ary = ['hello', 'world', 10, 20, 30, 40, true, false, {cpu : 'i7'}, () => {}, ]
+  document.write(`<div>총 합 : ${getTotal(ary)}</div>`);
 </script>
 <hr>
 
