--- a/Javascript/09_Math_Object.html
+++ b/Javascript/09_Math_Object.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Math_object</title>
 </head>
 <body>
 
@@ -46,7 +46,25 @@
       → 0.0 이상 1.0 미만의 부동 소수점 의사 난수 반환
       → 암호학적으로 안전한 난수를 제공하지 않으므로 보안과 관련된 용도로 사용 금지(대신 window.crypto.getRandomValues() 메소드 권장)
 -->
+<h4>Math 내장 객체</h4>
+<script>
 
+  const value = 12.5678;
+  document.write(`<div>올림 : ${Math.ceil(value)}</div>`);
+  document.write(`<div>내림 : ${Math.floor(value)}</div>`);
+  document.write(`<div>반올림 : ${Math.round(value)}</div>`);
+  document.write(`<div>절사 : ${Math.trunc(value)}</div>`);
+
+  /* 
+    0.0 <=  Math.random() < 1.0
+    0.0 <= Math.random() * 10 < 10.0
+     0 <= Math.floor(Math.random() * 10) < 10
+     1 <= Math.floor(Math.random() * 10 + 1) < 11
+  */
+
+ let lotto = Math.floor(Math.random() * 45 + 1); // 1부터 45까지의 난수
+ document.write(`<div>${lotto}</div>`);
+</script>
 
 
 <!-- 문제1. getRandomDouble() 함수 구현하기 -->
@@ -62,7 +80,16 @@
     3. 반환
       최솟값과 최댓값 사이의 임의의 실수 난수
   */
+  const getRandomDouble = (min, max) => Math.random() * (max - min) + min;
+  document.write(`<div>${getRandomDouble(3, 5)}</div>`);
 
+  /* 
+    0.0 <= Math.random() < 1.0
+
+    0.0 <= Math.random() * 2 < 2.0
+    3.0 <= Math.random() * 2 + 3.0 < 5.0
+    min <= Math.random() * (max-min) + min < max
+  */
 </script>
 <hr>
 
@@ -81,7 +108,8 @@
     3. 반환
       최솟값과 최댓값 사이의 임의의 정수 난수
   */
-  
+  const getRandomInt = (min, max) => Math.floor(Math.random() *(max-min) + min);
+  document.write(`<div>${getRandomInt(3,5)}</div>`);
 </script>
 <hr>
 
@@ -100,7 +128,8 @@
     3. 반환
       최솟값과 최댓값 사이의 임의의 정수 난수
   */
-  
+  const getRandomIntInclude = (min, max) => Math.floor(Math.random() *(max-min + 1) + min);
+  document.write(`<div>${getRandomIntInclude(3,5)}</div>`);
 </script>
 <hr>
 
@@ -128,6 +157,28 @@
       getCeil(12345.12345, -3) ===  13000
   */
   
+  /* 
+    Step1) 12345.12345 * 100 === 1234512.345
+    Step2) Math.ceil(1234512.345) === 1234513
+    Step3) 1234513 / 100 == 12345.13
+    */
+
+  /*
+  Step1) 12345.12345 * 10 === 123451.2345
+  Step2) getCeil(123451.2345) === 123452
+  Step3) 123452 / 10 === 12345.2
+  */
+
+ const getCeil = (value, digit = 0) =>{
+    const power = Math.pow(10, digit);
+    return Math.ceil(value*power)/power; // 상황 별로 Math.floor(), Math.round(), Math.trunc() 대체 가능
+ }
+
+ document.write(`<div> 소수자리 2자리 올림 : ${getCeil(12345.12345, 2)}</div>`);
+ document.write(`<div> 소수자리 1자리 올림 : ${getCeil(12345.12345, 1)}</div>`);
+ document.write(`<div> 정수 올림 : ${getCeil(12345.12345, 0)}</div>`);
+ document.write(`<div> 일의 자리 올림 : ${getCeil(12345.12345, -1)}</div>`);
+ document.write(`<div> 십의 자리 올림 : ${getCeil(12345.12345, -2)}</div>`);
 </script>
 <hr>
 
