--- a/Javascript/07_Array_Object.html
+++ b/Javascript/07_Array_Object.html
@@ -108,9 +108,10 @@ b : 2, //자체 속성
   document.write(`<div>${months.pop()}</div>`);
 
   // Array.prototype.push() : 마지막 요소로 추가
+  //['Jen', 'Mar', 'April', 'April', 'May']
   document.write(`<div>${months.push('May')}</div>`);
 
-  // Array.prototype.splice() - 추가/삭제/수정 모두 가능ㅎ나 메소드
+  // Array.prototype.splice() - 추가/삭제/수정 모두 가능한 메소드
   // ['Jen', 'Mar', 'April', 'May']
   months.splice(2,1); // 인덱스 2부터 1개 요소 삭제
   //
@@ -122,6 +123,7 @@ b : 2, //자체 속성
 
   // Array.prototype.forEach() : 배열 순회
   months.forEach(element =>document.write(`<div>${element}</div>`));
+  months.forEach((element, i) => document.write(`<div>${i + 1}월 : ${element}</div>`));
 
   // Array.prototype.map() : 새로운 배열을 반환
   // ['Jan월', 'Feb월', 'Mar월', 'Apr월', 'May월']
@@ -129,13 +131,16 @@ b : 2, //자체 속성
   .map(element => element + '월')
   .forEach(element => document.write(`<div>${element}</div>`)); // 메소드 체이닝이라고 함
 
-  //Array.prototype.filter() : 조건식을 만족하는 요소만 가지는 새로울 배열을 전환
+  //Array.prototype.filter() : 조건식을 만족하는 요소만 가지는 새로운 배열을 전환
   months.filter((element, i) => i % 2 === 0) //인덱스를 2로 나눈 나머지가 0인 요소
         .forEach(element => document.write(`<div>${element}</div>`));
   
   // Array.prototype.entries() : 인덱스/요소를 쌍으로 가진 새로운 배열 반복자를 반환
   var itr = months.entries();
   console.log(itr);
+  console.log(itr.next()); // {done : false, value : [0, 'Jan']}
+  console.log(itr.next()); // {done : false, value : [1, 'Feb']}
+  console.log(itr.next());
   console.log(itr.next());
   console.log(itr.next()); // {done : true, value : undefined}
 
@@ -152,7 +157,7 @@ b : 2, //자체 속성
   }
 </script>
 
-
+<hr>
 <!-- 문제1. displayImage() 함수 구현하기 -->
 <h4>displayImage() 함수</h4>
 <script>
