--- a/Javascript/17_RegExp.html
+++ b/Javascript/17_RegExp.html
@@ -72,7 +72,7 @@
 -->
 
 <!--
-    대괄호 표현식
+    대괄호 표현식 // 메타 문자로서의 기능을 상실함
     1. 단일 문자 또는 조합 요소를 나타낼 때 사용한다.
     2. 사용 예시
       1) [.]   : 문자 . (\.)
