--- a/Javascript/13_Timer_Function.html
+++ b/Javascript/13_Timer_Function.html
@@ -6,6 +6,13 @@
   <title>Document</title>
 </head>
 <body>
+  <h4>setTimeout 함수</h4>
+  <script>
+    setTimeout(() => {
+      console.log('hello');
+    }, 1000); // 1000밀리초(1초) 후 동작
+
+  </script>
   
 <!--
     1. setTimeout()
@@ -16,7 +23,15 @@
         (2) 취소
           clearTimeout(timerId);
 -->
+<h4>setTimeout 함수</h4>
+<script>
+  const timeoutId = setTimeout(() => {
+    console.log('hello');
+  }, 1000); //1000 밀리초 후 동작
+  console.log(timeoutId);
+  clearTimeout(timeoutId); //타이머 함수의 동작을 취소시킴
 
+</script>
 <!--
     2. setInterval()
       1) 지정한 시간(밀리초) 마다 반복해서 동작한다.
@@ -26,7 +41,18 @@
         (2) 취소
           clearInterval(timerId);
 -->
+<h4>setInterval</h4>
+<script>
+  let count = 0;
+  const intervalId = setInterval(() => {
+    count ++
+    console.log(count + '번째 hello');
+    if(count === 10) {
+      clearInterval(intervalId);
+    }
+  }, 1000); // 1초마다 함수 실행
 
+</script>
     
 
 <!-- 문제. timer() 함수 구현하기 -->
@@ -41,7 +67,29 @@
     3. 반환
       없음
   */
-  
+  // setInterval 함수
+  // const timer = (seconds) =>{
+  //   const timerId = setInterval(() => {
+  //     if(seconds === 0){
+  //       clearInterval(timerId); // 타이머의 종료
+  //       return;                 // timer 함수 종료
+  //     }
+  //     document.write(`<div>${seconds--}</div>`);
+  //   }, 1000);
+  // }
+  // timer(5);
+
+  // setTimeout 함수 (recursive call : 재귀적 호출)
+  const timer = (seconds) => {
+    setTimeout(() => {
+      if(seconds === 0)
+        return; // timer 함수 종료
+      document.write(`<div>${seconds--}</div>`);
+      timer(seconds);
+    }, 1000);
+  }
+  timer(5);
+
 </script>
 <hr>
 
