--- a/Javascript/16_BOM.html
+++ b/Javascript/16_BOM.html
@@ -20,12 +20,93 @@
       4) screen   : 브라우저 화면 정보를 관리하는 객체이다.
 -->
 
+<h4>history 객체</h4>
+<div>
+  <button type="button" onclick="history.back()">뒤로</button>
+  <button type="button" onclick="history.forward()">앞으로</button>
+  <button type="button" onclick="history.go(-2)">뒤로뒤로</button>
+</div>
+<hr>
 
+<h4>location 객체</h4>
+<div>
+  <button type="button" onclick="letsGo()">Let's Go</button>
+  <button type="button" onclick="location.reload()">새로고침(캐시 사용)</button>
+  <button type="button" onclick="location.reload(true)">항상 새로고침</button>
+</div>
+<script>
 
+  const letsGo = () => {
+    // 이동 (일반적인 이동)
+    // location.href = 'https://www.naver.com/'; // location = 'https://www.naver.com/', href 생략 가능
+    // 이동 (히스토리를 남기지 않는 방식)
+    location.replace('https://www.naver.com/');
+  }
+</script>
+<hr>
+
+<h4>screen 객체</h4>
+<script>
+  document.write(`<div>화면 높이 : ${screen.height}</.div>`);
+  document.write(`<div>화면 너비 : ${screen.width}</.div>`);
+  document.write(`<div>화면 가용 높이 : ${screen.availHeight}</.div>`);
+  document.write(`<div>화면 가용 너비 : ${screen.availWidth}</.div>`);
+</script>
+<hr>
+
+<h4>window 객체</h4>
+<div>
+  <button type="button" id="open-btn">팝업열기</button>
+  <button type="button" id="close-btn">팝업닫기</button>
+</div>
+<div>
+  <input type="text" id="parent" placeholder="팝업창으로 전송할 메시지">
+  <button type="button" id="send-btn">전송</button>
+</div>
+<script>
+
+  // 전역 변수
+  var popup = null; // 팝업 창을 저장할 변수
+  var opened = false; // 팝업 창 오픈 여부를 저장할 변수
+  
+  const openPopup = () => {
+    if(opened){
+      alert('팝업창은 이미 열려있습니다.');
+      return; // openpopup 함수 실행 종료
+    }
+    popup = open('popup.html', '', 'width =320, height = 480'); //팝업 창 열기
+    opened = true;
+  }
+
+  const closePopup = () => {
+    if(opened) { //팝업 창 닫기
+      popup.close();
+      opened = false;
+    }
+  }
+
+  const sendPopup = () => {
+    /* 
+    popup.document.getElementById('parent-msg') 인식을 위해서
+    popup 창의 본문의 모든 코드를 읽은 뒤 처리하는 load 이벤트가 필요하다 */
+
+    popup.onload = function(event){
+      popup.document.getElementById('parent-msg') = window.document.getElementById('parent').value;
+    }
+  }
+  const openBtn = document.getElementById('open-btn');
+  const closeBtn = document.getElementById('close-btn');
+  const sendBtn = document.getElementById('send-btn');
+  openBtn.addEventListener('click', openPopup);
+  closeBtn.addEventListener('click', closePopup);
+  sendBtn.addEventListener('click', openPopup);
+  sendBtn.addEventListener('click', sendPopup);
+
+</script>
 <!-- 문제. 링크 버튼 -->
 <h4>링크 버튼</h4>
 <div>
-  <button type="button" id="go-btn"></button>
+  <button type="button" id="go-btn">링크 버튼</button>
 </div>
 <script>
   // 객체 site 의 정보를 이용하여 버튼 텍스트와 버튼 링크를 만드시오.
@@ -33,7 +114,11 @@
     name: '네이버',
     url: 'https://www.naver.com',
   }
-  
+  const goBtn = document.getElementById('go-btn');
+  goBtn.textContent = site.name;
+  goBtn.addEventListener('click', function(event){
+    location.href = site.url;
+  })
 </script>
 
 </body>
