--- a/Javascript/16_BOM.html
+++ b/Javascript/16_BOM.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="../assets/lib/jquery-3.7.1.min.js"></script>
+  <title>BOM</title>
+  <script src="../assets/lib/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.5/js.cookie.min.js" integrity="sha512-nlp9/l96/EpjYBx7EP7pGASVXNe80hGhYAUrjeXnu/fyF5Py0/RXav4BBNs7n5Hx1WFhOEOWSAVjGeC3oKxDVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
@@ -63,6 +63,7 @@
   <input type="text" id="parent" placeholder="팝업창으로 전송할 메시지">
   <button type="button" id="send-btn">전송</button>
 </div>
+<div id="child-msg"></div>
 <script>
 
   // 전역 변수
@@ -70,12 +71,30 @@
   var opened = false; // 팝업 창 오픈 여부를 저장할 변수
   
   const openPopup = () => {
+
+    // dont_open_today 쿠키 값 가져오기 (쿠키가 없으면 undefined)
+    const dontOpenToday = Cookies.get('dont_open_today');
+
+    //팝업창 화면 중앙에 띄우기
+    const width = 320;
+    const height = 480;
+    const top = (screen.height - height) / 2;
+    const left = (screen.width - width) / 2;
+
     if(opened){
       alert('팝업창은 이미 열려있습니다.');
       return; // openpopup 함수 실행 종료
     }
-    popup = open('popup.html', '', 'width =320, height = 480'); //팝업 창 열기
+    if(dontOpenToday) {
+      alert('오늘은 팝업 창을 열 수 없습니다.');
+      return; // openpopup 함수 실행 종료
+    }
+
+    popup = open('popup.html', '', `width =${width}, height = ${height}, top = ${top}, left = ${left}`); //팝업 창 열기
     opened = true;
+    if(!popup) {
+      alert('팝업 차단을 해제해 주세요.')
+    }
   }
 
   const closePopup = () => {
@@ -94,6 +113,7 @@
       popup.document.getElementById('parent-msg') = window.document.getElementById('parent').value;
     }
   }
+
   const openBtn = document.getElementById('open-btn');
   const closeBtn = document.getElementById('close-btn');
   const sendBtn = document.getElementById('send-btn');
@@ -103,6 +123,7 @@
   sendBtn.addEventListener('click', sendPopup);
 
 </script>
+
 <!-- 문제. 링크 버튼 -->
 <h4>링크 버튼</h4>
 <div>
