--- a/Javascript/19_Promise.html
+++ b/Javascript/19_Promise.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
 
-<!--
-    비동기 작업
+  <!--
+    비동기 작업(Asynchronous)
     1. 특정 코드 실행이 종료될때까지 기다리지 않고 다음 코드를 먼저 실행한다.
     2. 클라이언트가 서버로 데이터를 요청한 뒤 서버가 응답할때까지 사용자는 기다릴 필요가 없다.
     3. 콜백 함수로 비동기 처리 방식의 문제를 해결할 수 있으나 콜백 지옥(callback hell)에 빠질 수 있다.
@@ -23,8 +25,35 @@
         })
       })
 -->
+  <h4>비동기 작업의 특징 이해하기</h4>
+  <div>
+    <button type="button" onclick="doNotWork()">doNotWork</button>
+  </div>
+  <script>
+    const doNotWork = () => {
 
-<!--
+      // 1. 변수 선언하기
+      let authorName; // undefined 상태
+
+      // 2. 비동기 작업 수행하기 
+      const xhr = new XMLHttpRequest();
+      const method = 'GET';
+      const url = 'https://thetestrequest.com/authors/3';
+      xhr.open(method, url);
+      xhr.addEventListener('load', function (event) {
+        const { id, name, email, avatar, created_at, updated_at } = JSON.parse(xhr.responseText); // 객체의 구조, 분해, 할당
+        authorName = name;
+      })
+      xhr.send();
+
+      // 3. 변수 확인하기
+      console.log(authorName); // 작업이 다 될때까지 기다려주지 않아 값은 undefined가 나온다.
+    }
+
+  </script>
+  <hr>
+
+  <!--
     Promise
 
     1. 비동기 작업의 최종 완료 또는 실패를 나타내는 객체이다.
@@ -32,7 +61,7 @@
     3. 비동기 작업이 완료되면 결과를 제공하겠다는 '약속'을 반환하는 방식으로 동작한다.
 -->
 
-<!--
+  <!--
     Promise 상태
 
     1. pending   : 대기 (Promise 실행 전 초기상태)
@@ -51,7 +80,7 @@
           └---------------------------------------------------------------┘
 -->
 
-<!--
+  <!--
     Promise 생성자
 
     1. 형식
@@ -72,7 +101,7 @@
       })
 -->
 
-<!--
+  <!--
     Promise 메소드
 
     1. Promise.prototype.then()
@@ -113,8 +142,105 @@
           }).then((response) => { response 처리 })
             .catch((error) => { error 처리 })
 -->
-
 <!--
+    new Promise( (resolve, reject) => {
+
+        resolve('success');
+
+        reject('fail');
+
+    }).then(res => {
+
+        console.log(res);  // success
+
+    }).catch(res => {
+
+        console.log(res);  // fail
+
+    })
+-->
+  <h4>promise 객체 사용하기(비동기 작업의 문제 해결)</h4>
+  <div>
+    <button type="button" onclick="doWork()">doWork</button>
+  </div>
+
+  <script>
+    const doWork = () => {
+
+      //1. 변수 선언하기
+      let authorName; // undefined;
+
+      // 2. Promise 객체 내부에서 비동기 작업 수행하기 (Fake API로 요청해서 응답 받아오기)
+      const objPromise = new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+        const method = 'GET';
+        const url = 'https://thetestrequest.com/authors/3';
+        xhr.open(method, url);
+        //비동기 작업 성공 : resolve 함수를 호출하라!
+        xhr.addEventListener('load', function (event) {
+          resolve(JSON.parse(xhr.responseText));
+        })
+        // 비동기 작업 실패 : reject 함수를 호출하라!
+        xhr.addEventListener('error', function (event) {
+          reject(xhr.status);
+        })
+        xhr.send();
+      })
+
+      // 3. Promise 객체의 메소드 실행(then 메소드에는 resolve 함수를 만들고, catch 메소드에는 reject 함수를 만든다.)
+      objPromise
+      .then(responseData => {
+        const { name } = responseData;
+        authorName = name;
+        console.log(authorName);
+      })
+        .catch(status => {
+          console.log(status);
+        });
+      }
+
+  </script>
+  <hr>
+
+  <h4>promise 객체 사용하기(비동기 작업의 문제 해결 연습)</h4>
+  <div>
+    <button type="button" onclick="practice()">practice</button>
+  </div>
+
+  <script>
+
+    const practice = () => {
+
+      let authorName;
+      new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+        const method = 'GET';
+        const url = 'https://thetestrequest.com/authors/3';
+        xhr.open(method, url);
+        //비동기 작업 성공 : resolve 함수를 호출하라!
+        xhr.addEventListener('load', function (event) {
+          resolve(JSON.parse(xhr.responseText));
+        })
+        // 비동기 작업 실패 : reject 함수를 호출하라!
+        xhr.addEventListener('error', function (event) {
+          reject(xhr.status);
+        })
+        xhr.send();
+      })        
+      .then(responseData =>{
+        const { name } = responseData;
+        authorName = name;
+        console.log(authorName)
+      }).catch(status => {
+          console.log(status);
+        });
+      
+    }
+
+
+  </script>
+
+  <!--
     Promise Chaining
 
     1. 두 개 이상의 비동기 작업을 순차적으로 실행해야 하는 상황을 해결하는 방법이다.
@@ -139,28 +265,29 @@
 
 
 
-<!-- 문제1. Promise 를 이용하여 FakeAPI 정보 가져오기 -->
-<h4>FakeAPI 정보 가져오기</h4>
-<div>
-  <button type="button" onclick="fakeApi('https://thetestrequest.com/authors/1')">authors 1</button>
-  <button type="button" onclick="fakeApi('https://thetestrequest.com/authors/2')">authors 2</button>
-</div>
-<script>
+  <!-- 문제1. Promise 를 이용하여 FakeAPI 정보 가져오기 -->
+  <h4>FakeAPI 정보 가져오기</h4>
+  <div>
+    <button type="button" onclick="fakeApi('https://thetestrequest.com/authors/1')">authors 1</button>
+    <button type="button" onclick="fakeApi('https://thetestrequest.com/authors/2')">authors 2</button>
+  </div>
+  <script>
 
-</script>
-<hr>
+  </script>
+  <hr>
 
 
 
-<!-- 문제2. Promise 를 반환하는 함수를 이용하여 FakeAPI 정보 가져오기 -->
-<h4>Promise 반환 함수</h4>
-<div>
-  <button type="button" id="get-info-btn">getInfo</button>
-</div>
-<script>
+  <!-- 문제2. Promise 를 반환하는 함수를 이용하여 FakeAPI 정보 가져오기 -->
+  <h4>Promise 반환 함수</h4>
+  <div>
+    <button type="button" id="get-info-btn">getInfo</button>
+  </div>
+  <script>
 
-</script>
-<hr>
+  </script>
+  <hr>
 
 </body>
+
 </html>
