--- a/Javascript/19_Promise.html
+++ b/Javascript/19_Promise.html
@@ -262,7 +262,29 @@
           .then((finalResult) => { finalResult 처리 })
           .catch((error) => { error 처리 })
 -->
+  <h4>then() 메소드 연결</h4>
+  <div>
+    <button type="button" onclick="methodChain()">체이닝</button>
+  </div>
+  <script>
+    const methodChain = () => {
 
+      new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+        const method = 'GET';
+        const url = '';
+        xhr.open(method, url);
+        xhr.addEventListener('load', function(event) {
+          resolve(JSON.parse(xhr.responseText));
+        })
+        xhr.send();
+      })
+        .then(responseData => responseData.name)
+        .then(name => name + '님')
+        .then(authorName => console.log(authorName));
+    }
+
+  </script>
 
 
   <!-- 문제1. Promise 를 이용하여 FakeAPI 정보 가져오기 -->
@@ -272,7 +294,23 @@
     <button type="button" onclick="fakeApi('https://thetestrequest.com/authors/2')">authors 2</button>
   </div>
   <script>
+    const fakeApi = (url) => {
+      new Promise((resolve,reject) => {
+        const xhr = new XMLHttpRequest();
+        const method = 'GET';
+        xhr.open(method, url);
+        xhr.addEventListener('load', function(event) {
+          resolve(JSON.parse(xhr.responseText));
+        })
+        xhr.addEventListener('error', function(event) {
+          reject(xhr.status);
+        })
+        xhr.send();
+      })
+        .then(responseData => console.log(responseData))
+        .catch(status => console.log(status));
 
+        };
   </script>
   <hr>
 
@@ -284,7 +322,28 @@
     <button type="button" id="get-info-btn">getInfo</button>
   </div>
   <script>
+    const getInfo = (url, method) => {
+      return new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+        const url = 'https://thetestrequest.com/authors/1';
+        xhr.open(method, url);
+        xhr.addEventListener('load', function(event) {
+          resolve(JSON.parse(xhr.responseText));
+        })
+        xhr.addEventListener('error', function(event) {
+          reject(xhr.status);
+        })
+        xhr.send();
+      });
+    }
+    document.getElementById('get-info-btn').addEventListener('click', function(event) {
 
+      // const retValue = getInfo(); // getInfo() 자체가 promise 객체가 되어버림
+      // retValue.then().catch(); 
+      getInfo('https://thetestrequest.com/authors/1', 'GET')
+        .then(responseData => console.log(responseData))
+        .catch(status => console.log(status));
+    })
   </script>
   <hr>
 
