--- a/Javascript/20_FetchAPI.html
+++ b/Javascript/20_FetchAPI.html
@@ -84,6 +84,43 @@
         Response.text()           | 응답 본문의 Text 표현으로 이행하는 프로미스를 반환한다. (Text, XML)
 -->
 
+<h4>blob 리소스 요청과 응답</h4>
+<div>
+<button type = "button" id = "blob-btn">blob</button>
+<br><br>
+<img id = "blob-image" width = "192px">
+</div>
+<script>
+document.getElementById('blob-btn').addEventListener('click', function(event){
+  fetch('../assets/images/flower1.jpg', {method:'GET'})
+    .then(response => {
+      if(!response.ok) {
+        throw new Error(response.status);
+      }
+      return response.blob(); // 이미지의 이진데이터, then의 return 값은 그 다음 then의 매개변수가 된다.
+    })
+    .then(binaryImage => {
+      document.getElementById('blob-image').src = URL.createObjectURL('click',)
+    })
+})
+
+</script>
+<hr>
+
+<h4>xml 리소스 요청과 응답</h4>
+<div>
+  <button type="button" id="xml-btn">xml</button>
+</div>
+<script>
+
+// document.getElementById('xml-btn').addEventListener('click',function(event){
+//   fetch('https://thetestrequest.com/authors/1.xml', {method : 'GET'})}
+//   .then(response => response.text())
+//   .then(responseData=> {
+//     const xmlDocument = new DOMparser().parseFromString(responseData,'xml')}
+//   )
+</script>
+<hr>
 <!--
     async 함수
 
@@ -118,17 +155,31 @@
 <h4>로그인</h4>
 <form id="login-form">
   <div><input type="text" name="id" placeholder="Id"></div>
-  <div></div><input type="password" name="password" placeholder="Password"></div>
-  <div></div><button type="button" id="login-btn">Log In</button></div>
+  <div><input type="password" name="password" placeholder="Password"></div>
+  <div><button type="button" id="login-btn">Log In</button></div>
 </form>
 <script>
+  
   /*
     fetch() 함수를 이용하여 다음 조건에 따라 로그인을 요청하는 코드를 작성하시오.
     1. 요청 url       : /user/login.do
     2. 요청 method    : post
     3. 요청 parameter : login-form 내부의 입력 요소
   */
-
+document.getElementById('login-btn').addEventListener('click', function(event){
+  const loginForm = new FormData(document.getElementById('login-form'));
+  fetch('/user/login.do', {
+    method : 'POST',
+    body : loginForm,
+  })
+  // const entries = loginForm.entries();
+  // while( (element= entries.next()).done === false) {
+  //   console.log(element.value);
+  // }
+  // for(const [name, value] of entries) {
+  //   console.log(name, value);
+  // }
+})
 </script>
 <hr>
 
